--- a/templates/account/create_multiple_account.html
+++ b/templates/account/create_multiple_account.html
@@ -2,18 +2,16 @@
 <html lang="vi">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mã OTP - ATTEND 3D</title>
+    <title>Tạo tài khoản - ATTEND 3D</title>
   </head>
   <body>
     <table>
       <tr>
         <td>
-          <strong>Chào bạn</strong>
-          <p>Mã OTP của bạn là: <strong>{{ otp }}</strong></p>
-          <p>Mã OTP có hiệu lực trong vòng 5 phút.</p>
-          <p>Vui lòng không chia sẻ mã này với người khác.</p>
-          <p>Nếu bạn không yêu cầu mã OTP này, vui lòng bỏ qua email.</p>
+          <strong>Chào bạn {{ name }},</strong>
+          <p>Số điện thoại của bạn: <strong>{{ phone }}</strong></p>
+          <p>Mật khẩu mới của bạn là: <strong>{{ password }}</strong></p>
+          <p>Vui lòng đăng nhập vào hệ thống để kích hoạt tài khoản.</p>
         </td>
       </tr>
       <tr>
@@ -21,7 +19,7 @@
           <p>Trân trọng,</p>
           <p><strong>ATTEND 3D</strong></p>
           <p>Website: <a href="https://attend3d.io">attend3d.io</a></p>
-          <p>Phone number: 0825 025 347</p>
+          <p>Phone: 0825 025 347</p>
           <p>
             Email:
             <a href="mailto:zephyrnguyen.vn@gmail.com"
