--- a/templates/account/login_email.html
+++ b/templates/account/login_email.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mã OTP - FACE CLASS</title>
+    <title>Mã OTP - ATTEND 3D</title>
   </head>
   <body>
     <table>
       <tr>
         <td align="center">
-          <h1>FACE CLASS</h1>
+          <h1>ATTEND 3D</h1>
           <p>Thông báo đăng nhập thành công</p>
         </td>
       </tr>
@@ -29,8 +29,8 @@
       <tr>
         <td>
           <p>Trân trọng,</p>
-          <p><strong>FACE CLASS</strong></p>
-          <p>Website: <a href="https://faceclass.io">faceclass.io</a></p>
+          <p><strong>ATTEND 3D</strong></p>
+          <p>Website: <a href="https://attend3d.io">attend3d.io</a></p>
           <p>Phone number: 0825 025 347</p>
           <p>
             Email:
@@ -39,7 +39,7 @@
             >
           </p>
           <hr />
-          <p>&copy; 2025 FACE CLASS. All rights reserved.</p>
+          <p>&copy; 2025 ATTEND 3D. All rights reserved.</p>
         </td>
       </tr>
     </table>
