FC0013: Auto create audit log for lecturers app and assigmnet class, subject for lecturer

--- a/templates/account/create_multiple_account.html
+++ b/templates/account/create_multiple_account.html
@@ -10,7 +10,7 @@
         <td>
           <strong>Chào bạn {{ name }},</strong>
           <p>Số điện thoại của bạn: <strong>{{ phone }}</strong></p>
-          <p>Mật khẩu mới của bạn là: <strong>{{ password }}</strong></p>
+          <p>Mật khẩu của bạn là: <strong>{{ password }}</strong></p>
           <p>Vui lòng đăng nhập vào hệ thống để kích hoạt tài khoản.</p>
         </td>
       </tr>
