FC0022: Push data and update UI

--- a/templates/account/create_multiple_account.html
+++ b/templates/account/create_multiple_account.html
@@ -9,6 +9,7 @@
       <tr>
         <td>
           <strong>Chào bạn {{ name }},</strong>
+          <p>Hiện tại chúng tôi đang xin dữ liệu của các bạn để test. Vui lòng bỏ qua email này.</p>
           <p>Số điện thoại của bạn: <strong>{{ phone }}</strong></p>
           <p>Mật khẩu của bạn là: <strong>{{ password }}</strong></p>
           <p>Vui lòng đăng nhập vào hệ thống để kích hoạt tài khoản.</p>
