--- a/templates/file/template_sample_leave.html
+++ b/templates/file/template_sample_leave.html
@@ -106,7 +106,7 @@
         <tr>
             <td class="header-left" style="width: 50%; font-size: 10px">
                 <p>TRƯỜNG ĐẠI HỌC CÔNG NGHIỆP TPHCM</p>
-                <p>Khoa {{ department_name }}</p>
+                <p> {{ department_name }}</p>
                 <div class="horizontal-rule"></div>
             </td>
             <td class="header-right" style="width: 50%; font-size: 10px">
